--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.87MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-164.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.76MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.68MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-235.8KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.87MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.52MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-438.9KB/s(Youtube:不良林), server: 211.99.100.90, port: 39801, type: ss, cipher: chacha20-ietf-poly1305, password: 9a16803c-27f5-46b2-9445-0ab34667143d}
-  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: 222.186.10.231, port: 39805, type: ss, cipher: chacha20-ietf-poly1305, password: 9a16803c-27f5-46b2-9445-0ab34667143d}
-  - {name: 🇨🇳 中国-887.3KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1260, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: 222.186.10.231, port: 39805, type: ss, cipher: chacha20-ietf-poly1305, password: 9a16803c-27f5-46b2-9445-0ab34667143d}
+  - {name: 🇨🇳 中国-151.2KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1260, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
   - {name: 🇫🇷 法国-2.26MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇭 瑞士-2.74MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-887.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-887.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-887.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-887.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-887.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-887.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.87MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-887.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
