--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-402.0KB/s(Youtube:不良林), server: f7d56ad5-e143-4f6e-ae6e-106dc2cc61f9.hk.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
+  - {name: 🇸🇬 新加坡-1.48MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇫🇷 法国-2.54MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-8.29MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.48MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-302.2KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1260, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-8.71MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.54MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.18MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-402.0KB/s(Youtube:不良林), server: f7d56ad5-e143-4f6e-ae6e-106dc2cc61f9.hk.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
+  - {name: 🇨🇳 中国-420.6KB/s(Youtube:不良林), server: 946afa90-3d05-450f-bcf4-397488bdc1f7.tw.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
+  - {name: 🇨🇳 中国-330.6KB/s(Youtube:不良林), server: 211.99.100.90, port: 39801, type: ss, cipher: chacha20-ietf-poly1305, password: 9a16803c-27f5-46b2-9445-0ab34667143d}
+  - {name: 🇨🇳 中国-558.5KB/s(Youtube:不良林), server: 08cc996e-bd31-417d-9905-a33242782246.ru.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
+  - {name: 🇨🇳 中国-435.7KB/s(Youtube:不良林), server: 2d314b1c-2f88-4095-8a23-fb81d70dafc5.au.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
+  - {name: 🇨🇳 中国-535.9KB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11011, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-302.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-435.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-302.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-435.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-302.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-435.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-302.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-435.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-302.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-435.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-302.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-435.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-302.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-435.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
